--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="navbar__logo">
-                    <a href="/"><img src="img/logo.png" alt="logo"></a>
+                    <a href="#"><img src="img/logo.png" alt="logo"></a>
                 </div>
                 <nav class="navbar__nav">
                     <ul class="navbar__navList">
@@ -111,7 +111,7 @@
                         <p class="features__description">A dictionary of over 200 Latin words,with
                             a handful of model sentence. structures, to generate Lorem Ipsum</p>
                     </div>
-                    <a class="features__link" href="#">Learn more</a>
+                    <a class="features__link" href="#!">Learn more</a>
                 </div>
                 <div class="features__item">
                     <div class="features__itemInfo">
@@ -120,7 +120,7 @@
                         <p class="features__description">A dictionary of over 200 Latin words,with
                             a handful of model sentence. structures, to generate Lorem Ipsum</p>
                     </div>
-                    <a class="features__link" href="#">Learn more</a>
+                    <a class="features__link" href="#!">Learn more</a>
                 </div>
                 <div class="features__item">
                     <div class="features__itemInfo">
@@ -129,7 +129,7 @@
                         <p class="features__description">A dictionary of over 200 Latin words,with
                             a handful of model sentence. structures, to generate Lorem Ipsum</p>
                     </div>
-                    <a class="features__link" href="#">Learn more</a>
+                    <a class="features__link" href="#!">Learn more</a>
                 </div>
             </div>
         </section>
